Refactor SC Survey Analyzer: Remove unused files, update dependencies, and add setup scripts
- Deleted presales_survey_analysis.xlsx and test_sentiment_comparison.py files.
- Updated requirements.txt to remove fpdf, reportlab, and python-docx; added pyinstaller.
- Added Streamlit configuration file (.streamlit/config.toml).
- Created shell scripts for report generation (1_generate_report.sh) and dashboard launch (2_launch_dashboard.sh).
- Added comprehensive deployment guide (DEPLOYMENT_GUIDE.md) for packaging and distribution.
- Implemented build scripts for creating standalone executables (build_executable.bat and build_executable.sh).
- Enhanced setup scripts (setup.bat and setup.sh) for virtual environment creation and dependency installation.

--- a/.gitignore
+++ b/.gitignore
@@ -46,10 +46,18 @@ ENV/
 Thumbs.db
 
 # Streamlit
-.streamlit/
+# .streamlit/ - KEEP: contains config.toml for theme
 
-# Output files
+# Generated output files
 exports/
 output/
 *.pdf
 *.pptx
+INSIGHTS_REPORT_*.txt
+future_*.html
+
+# PyInstaller
+*.spec
+
+# Claude Code IDE
+.claude/
