--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,4 @@ nltk==3.8.1
 textblob==0.18.0
 pillow==10.2.0
 openpyxl==3.1.2
-fpdf==1.7.2
-reportlab==4.0.9
-python-docx==1.1.0
+pyinstaller==6.3.0
