Remove legacy setup and build scripts; delete QUICK_START.md and related batch/shell files. Add comprehensive Future Plan document outlining strategic enhancements for presales survey analysis.

--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,7 @@ INSIGHTS_REPORT_*.txt
 future_*.html
 
 # PyInstaller
-*.spec
+# *.spec - KEEP app.spec (custom configuration)
 
 # Claude Code IDE
 .claude/
