--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ textblob==0.18.0
 pillow==10.2.0
 openpyxl==3.1.2
 pyinstaller==6.3.0
+boto3>=1.34.0
+python-dotenv>=1.0.0
+python-pptx>=0.6.21
+fpdf2>=2.7.0
